--- a/index.html
+++ b/index.html
@@ -827,6 +827,123 @@
     </footer>
 
     <script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const loanTypeRadios = document.querySelectorAll('input[name="loanType"]');
+        const currentBankGroup = document.getElementById('currentBankGroup');
+        const currentBankInput = document.getElementById('currentBank');
+
+        // ✅ Get partner ID from URL
+        const params = new URLSearchParams(window.location.search);
+        const partnerId = params.get("partner"); // e.g., 'john123'
+
+        // ✅ Create hidden input to store partner ID
+        const hiddenInput = document.createElement("input");
+        hiddenInput.type = "hidden";
+        hiddenInput.name = "partnerId";
+        hiddenInput.value = partnerId || '';
+        document.getElementById("loanForm").appendChild(hiddenInput);
+
+        // Show/hide current bank based on loan type
+        loanTypeRadios.forEach(radio => {
+            radio.addEventListener('change', function() {
+                if (this.value === 'refinance') {
+                    currentBankGroup.classList.remove('hidden');
+                    currentBankInput.required = true;
+                } else {
+                    currentBankGroup.classList.add('hidden');
+                    currentBankInput.required = false;
+                    currentBankInput.value = '';
+                }
+            });
+        });
+
+        // ✅ Handle form submission to WhatsApp
+        document.getElementById('loanForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+
+            const formData = new FormData(this);
+            const data = Object.fromEntries(formData);
+
+            let message = `Hello! I'm interested in a mortgage loan. Here are my details:\n\n`;
+            message += `Name: ${data.name}\n`;
+            message += `Contact: ${data.contact}\n`;
+            message += `Email: ${data.email}\n`;
+            message += `Loan Type: ${data.loanType === 'new-loan' ? 'New Loan' : 'Refinance'}\n`;
+            message += `Loan Amount: SGD ${parseInt(data.amount).toLocaleString()}\n`;
+
+            if (data.loanType === 'refinance' && data.currentBank) {
+                message += `Current Bank: ${data.currentBank}\n`;
+            }
+
+            if (partnerId) {
+                message += `\n[Tracking: Partner ID = ${partnerId}]`;
+            }
+
+            message += `\n\nPlease help me find the best mortgage rates. Thank you!`;
+
+            const whatsappUrl = `https://wa.me/6594657429?text=${encodeURIComponent(message)}`;
+            window.open(whatsappUrl, '_blank');
+        });
+
+        // FAQ toggle
+        document.querySelectorAll('.faq-question').forEach(question => {
+            question.addEventListener('click', function() {
+                const faqItem = this.parentElement;
+                const answer = faqItem.querySelector('.faq-answer');
+
+                document.querySelectorAll('.faq-item').forEach(item => {
+                    if (item !== faqItem) {
+                        item.classList.remove('open');
+                        item.querySelector('.faq-answer').classList.remove('open');
+                    }
+                });
+
+                faqItem.classList.toggle('open');
+                answer.classList.toggle('open');
+            });
+        });
+
+        // Smooth scrolling
+        document.querySelectorAll('a[href^=\"#\"]').forEach(anchor => {
+            anchor.addEventListener('click', function(e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    target.scrollIntoView({
+                        behavior: 'smooth',
+                        block: 'start'
+                    });
+                }
+            });
+        });
+
+        // Scroll animations
+        const observerOptions = {
+            threshold: 0.1,
+            rootMargin: '0px 0px -50px 0px'
+        };
+
+        const observer = new IntersectionObserver(function(entries) {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('animate-on-scroll');
+                }
+            });
+        }, observerOptions);
+
+        document.querySelectorAll('.benefit-card, .tlc-partners-slide, .faq-item').forEach(el => {
+            observer.observe(el);
+        });
+    });
+</script>
+
+</body>
+</html>
+
+
+<!--
+First version of JS:
+<script>
         // Form functionality
         document.addEventListener('DOMContentLoaded', function() {
             const loanTypeRadios = document.querySelectorAll('input[name="loanType"]');
@@ -926,6 +1043,4 @@
                 observer.observe(el);
             });
         });
-    </script>
-</body>
-</html>
+    </script> -->
