--- a/index.html
+++ b/index.html
@@ -546,10 +546,12 @@
 
             .hero-text h1 {
                 font-size: 1.8rem;
+                text-align: center;
             }
 
             .hero-text p {
                 font-size: 1rem;
+                text-align: center;
             }
 
             .form-container {
