--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         <!-- Review 3 -->
                         <div class="review-card">
                             <div class="review-text">
-                                Dexter is not just my mortgage advisor—he is also my trusted go-to expert for my clients' mortgage needs as well. I have complete confidence in his ability to provide sound advice, ensuring the best outcomes for those I refer to him. Beyond his unwavering commitment to finding optimal solutions, Dexter upholds the highest standards of professionalism. He is always honest, unbiased, and analytical, tailoring every recommendation to your unique needs and circumstances. His clear and insightful explanations of mortgage rates make the decision-making process effortless and well-informed.
+                                Dexter is not just my mortgage advisor—he is also my trusted go-to expert for my clients' mortgage needs as well. I have complete confidence in his ability to provide sound advice, ensuring the best outcomes for those I refer to him. Beyond his unwavering commitment to finding optimal solutions, Dexter upholds the highest standards of professionalism.
                             </div>
                             <div class="reviewer-info">
                                 <div class="reviewer-avatar">RL</div>
