--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                     <li>Your latest 12 months CPF contribution history. (Not transaction history)</li>
                     <li>Your Option to Purchase or Sale and Purchase Agreement</li>
                 </ul>
-                <p>A more detailed guide can be found here.</p>
+                <p>A more detailed guide can be found <a href="https://theloanconnection.com.sg/our-step-by-step-guide-to-retrieve-hdb-cpf-and-iras-documents/" target="_blank" rel="noopener noreferrer">here</a>.</p>
             </div>
         </div>
     </div>
