--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <!-- Success Message -->
                     <div class="form-page" id="successPage">
                         <div class="success-message">
-                            <h4>🎉 Thank you for your submission!</h4>
+                            <h4>Thank you for your submission!</h4>
                             <p>We've received your loan application and will get back to you within 24 hours with your personalized quote.</p>
                         </div>
                     </div>
