--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                         <div class="form-group">
                             <label for="loanAmount">Loan Amount (SGD)</label>
                             <input type="text" id="loanAmount" name="loanAmount" placeholder="e.g., 800,000" required>
+                            <div id="loanAmountError" class="form-error" style="display:none;"></div>
                         </div>
 
                         <div class="button-group">
