--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
                         <div class="form-group">
                             <label for="phoneNumber">Phone Number</label>
-                            <input type="tel" id="phoneNumber" name="phoneNumber" required>
+                            <input type="tel" id="phoneNumber" name="phoneNumber" placeholder="+65 9123 4567" required>
                         </div>
 
                         <div class="form-group">
